--- a/base/service.yaml
+++ b/base/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 metadata:
   name: postgresql
   annotations:
+    argocd.argoproj.io/sync-wave: "1"
     template.openshift.io/expose-uri: 'postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}'
 spec:
   ipFamilies:
