--- a/overlays/dev/pvc.yaml
+++ b/overlays/dev/pvc.yaml
@@ -1,7 +1,9 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: postgresql
+  name: postgresql  
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   accessModes:
     - ReadWriteOnce
