--- a/overlays/dev/namespace.yaml
+++ b/overlays/dev/namespace.yaml
@@ -7,5 +7,5 @@ metadata:
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 # now that we deploying using ArgoCD we can specify the order of deploy
-  name: sso-postgresql
+  name: postgresql-dev
 spec: {}
